--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">MiniGameWep</div>
       </div>
+      <ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-BI85fvsGbbuwkVSv"
+data-ad-width = "728"
+data-ad-height = "90"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </div>
     <script>
       var container = document.querySelector("#unity-container");
