--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ data-ad-unit = "DAN-BI85fvsGbbuwkVSv"
 data-ad-width = "728"
 data-ad-height = "90"></ins>
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+      <ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-QhL0BrbtDysspqSH"
+data-ad-width = "160"
+data-ad-height = "600"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </div>
     <script>
       var container = document.querySelector("#unity-container");
